syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.pay.auth.grpc";
option java_outer_classname = "UserProfileProto";

service UserProfileService {
  rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse);
}

message CreateProfileRequest {
  string email = 1;
  string nickname = 2;
}

message CreateProfileResponse {
  string userProfileId = 1;
}
